Adjust MaxSum, PrintInOrder, MeanMedianMode a bit for readability